--- a/templates/views-edit.html
+++ b/templates/views-edit.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Views</title>
-  <link rel="stylesheet" href="/theme/admin/assets/css/views.css">
-  <script src="/theme/admin/assets/js/vue.js"></script>
-  <script src="/theme/admin/assets/js/vue-resource.js"></script>
+  <title>Views Edit</title>
+  <link rel="stylesheet" href="{{ asset('theme/admin/assets/css/views.css') }}">
+  <link rel="stylesheet" href="{{ asset('theme/admin/assets/css/jquery.dropdown.css') }}">
+  <script src="{{ asset('theme/admin/assets/js/jquery.min.js') }}"></script>
+  <script src="{{ asset('theme/admin/assets/js/layer/layer.js') }}"></script>
+  <script src="{{ asset('theme/admin/assets/js/vue.js') }}"></script>
+  <script src="{{ asset('theme/admin/assets/js/vue-resource.js') }}"></script>
+  <script src="{{ asset('theme/admin/assets/js/lodash.min.js') }}"></script>
+  <script src="{{ asset('theme/admin/assets/js/jquery.dropdown.js') }}"></script>
 </head>
 <body>
   <div id="App">
