--- a/templates/views-list.html
+++ b/templates/views-list.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Views</title>
-  <link rel="stylesheet" href="/theme/admin/assets/layui/css/layui.css">
-  <link rel="stylesheet" href="/theme/admin/assets/css/style.css">
+  <link rel="stylesheet" href="{{ asset('theme/admin/assets/layui/css/layui.css') }}">
+  <link rel="stylesheet" href="{{ asset('theme/admin/assets/css/style.css') }}">
 </head>
 <body>
   <button class="layui-btn  layui-btn-small layui-btn-danger" onclick="addView()">添加view</button>
@@ -42,7 +42,7 @@
       @endif
     </tbody>
   </table>
-  <script src="/theme/admin/assets/layui/layui.js"></script>
+  <script src="{{ asset('theme/admin/assets/layui/layui.js') }}"></script>
   <script>
   function addView() {
     layui.use(['layer', 'form'], function(){
@@ -57,7 +57,7 @@
           shadeClose: true,
           shade:0.4,
           title: '添加view',
-          content: '/admin/views/add'
+          content: "{{ route('admin/views/add') }}"
       });
       layer.full(index);
     });
@@ -76,7 +76,7 @@
           shadeClose: true,
           shade:0.4,
           title: '编辑view',
-          content: '/admin/views/view/'+view+'/edit'
+          content: "{{ route('admin/views/view/') }}"+view+'/edit'
       });
       layer.full(index);
     });
