--- a/templates/views-edit.html
+++ b/templates/views-edit.html
@@ -79,6 +79,7 @@
       <div class="preview-result" v-html="preview_result"></div>
     </div>
   </div>
-  <script src="/theme/admin/assets/js/app.js"></script>
+  <script src="{{ asset('theme/admin/assets/js/app.js') }}"></script>
+  {! phptojs()->put(['base_path' => base_path()])->getJsVars(); !}
 </body>
 </html>
