--- a/templates/views-list.html
+++ b/templates/views-list.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Views</title>
-  <link rel="stylesheet" href="{{ asset('theme/admin/assets/layui/css/layui.css') }}">
-  <link rel="stylesheet" href="{{ asset('theme/admin/assets/css/style.css') }}">
+  <base href="{{ base_path() }}">
+  <link rel="stylesheet" href="theme/admin/assets/layui/css/layui.css">
+  <link rel="stylesheet" href="theme/admin/assets/css/style.css">
+  <script src="theme/admin/assets/js/jquery.min.js"></script>
 </head>
 <body>
-  <button class="layui-btn  layui-btn-small layui-btn-danger" onclick="addView()">添加view</button>
+  <button class="layui-btn  layui-btn-small layui-btn" onclick="addView()">添加view</button>
+  <button class="layui-btn  layui-btn-small layui-btn" onclick="setView()">设置</button>
   <table class="layui-table" lay-skin="line">
     <colgroup>
       <col width="150">
@@ -34,7 +37,8 @@
         <td>{{ $v['json_export'] ? 'API' : 'Page' }}</td>
         <td>{{ $v['view_path'] }}</td>
         <td>
-          <a class="layui-btn layui-btn-xs" onclick="editView('{{ $v['id'] }}')">编辑</a>
+          <a class="layui-btn layui-btn-xs" href="admin/views/view/{{ $v['view_name'] }}/export">导出</a>
+          <a class="layui-btn layui-btn-xs" onclick="editView('{{ $v['view_name'] }}')">编辑</a>
           <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
         </td>
       </tr>
@@ -42,7 +46,8 @@
       @endif
     </tbody>
   </table>
-  <script src="{{ asset('theme/admin/assets/layui/layui.js') }}"></script>
+  <input id="iframe_status" value="" hidden="hidden">
+  <script src="theme/admin/assets/layui/layui.js"></script>
   <script>
   function addView() {
     layui.use(['layer', 'form'], function(){
@@ -57,7 +62,7 @@
           shadeClose: true,
           shade:0.4,
           title: '添加view',
-          content: "{{ route('admin/views/add') }}"
+          content: "admin/views/add"
       });
       layer.full(index);
     });
@@ -76,7 +81,43 @@
           shadeClose: true,
           shade:0.4,
           title: '编辑view',
-          content: "{{ route('admin/views/view/') }}"+view+'/edit'
+          content: "admin/views/view/"+view+'/edit'
+      });
+      layer.full(index);
+    });
+  }
+
+  function setView(view) {
+    layui.use(['layer', 'form'], function(){
+      var layer = layui.layer
+      ,form = layui.form
+      ,$ = layui.jquery;
+
+      var index = layer.open({
+          offset: '100px',
+          type: 2,
+          fix: false,
+          maxmin: true,
+          shadeClose: true,
+          shade:0.4,
+          title: 'Views设置',
+          content: "admin/views/settings",
+          end: function() {
+              var iframe_status = $("#iframe_status").val();
+              if (iframe_status == '1') {
+                  layer.msg('设置成功!', {
+                      icon: 1,
+                      time: 1000,
+                      shade: 0.1
+                  }, function() {
+                      location.reload();
+                  });
+              } else if (iframe_status == '0') {
+                  layer.msg('设置失败!', {
+                      icon: 5
+                  });
+              }
+          }
       });
       layer.full(index);
     });
